--- a/frist.css
+++ b/frist.css
@@ -7,6 +7,8 @@ header{
     height: 50px;
     display: flex;
     align-items: center; 
+    justify-content: space-between;
+    padding: 0px 80px 0px 80px;
 }
 .img1{
     height: 30px;
@@ -63,6 +65,7 @@ p{
     flex-wrap: wrap;
     gap: 30px;
     justify-content: center;
+    align-items: center;
     display: flex;
 
 }
@@ -136,10 +139,11 @@ p{
     margin-left: 20px;
 }
 .large{
-    height: 50vh;
-    width: 60vw;
-    margin-left: 200px;
+    height: 40vh;
+    width: 45vw;
     display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: rgb(236, 48, 48);
     border-radius: 20px;
     margin-top: 40px;
